--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -28,7 +28,7 @@
 
 .profile__edit-button {
   margin-left: 18px;
-  background: transparent url(../images/edit-button.png) center no-repeat;
+  background: transparent url("../images/edit-button.png") center no-repeat;
   height: 24px;
   width: 24px;
   grid-area: button;
@@ -42,7 +42,8 @@
 }
 
 .profile__add-button {
-  background: transparent url(../images/profile_add-button.png) center no-repeat;
+  background: transparent url("../images/profile_add-button.png") center
+    no-repeat;
   height: 50px;
   width: 150px;
   border: 2px solid white;
