--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,11 +1,10 @@
 .footer {
   display: block;
-  padding: 35px 0 60px;
+  margin-top: 0;
+  padding: 67px 0 60px;
 }
 
 .footer__copyright {
-  margin-top: 67px;
-  margin-bottom: 60px;
   color: #545454;
   font-family: "Inter", "Arial", sans-serif;
   font-size: 18px;
@@ -15,6 +14,11 @@
 
 @media screen and (max-width: 775px) {
   .footer {
-    padding: 30px 0 36px;
+    padding: 48px 0 36px;
+    width: 50%;
+  }
+
+  .footer__copyright {
+    font-size: 14px;
   }
 }
