--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -2,9 +2,7 @@
   display: flex;
   padding-top: 40px;
   align-items: center;
-  text-overflow: ellipsis;
   white-space: nowrap;
-  overflow: hidden;
 }
 
 .profile__info {
@@ -23,12 +21,15 @@
   font-weight: 500;
   line-height: 1.14;
   grid-area: title;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
   max-width: 400px;
 }
 
 .profile__edit-button {
   margin-left: 18px;
-  background: transparent url("../images/edit-button.png") center no-repeat;
+  background: transparent url("../images/edit-button.svg") center no-repeat;
   height: 24px;
   width: 24px;
   grid-area: button;
@@ -42,7 +43,7 @@
 }
 
 .profile__add-button {
-  background: transparent url("../images/profile_add-button.png") center
+  background: transparent url("../images/profile_add-button.svg") center
     no-repeat;
   height: 50px;
   width: 150px;
@@ -61,6 +62,9 @@
   font-size: 18px;
   line-height: 1.2;
   grid-area: description;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
   max-width: 200px;
 }
 
