--- a/blocks/card.css
+++ b/blocks/card.css
@@ -5,8 +5,7 @@
   margin-top: 0;
   width: 100%;
   color: black;
-  fill: solid white;
-  overflow: visible;
+  overflow: hidden;
   border-radius: 10px;
 }
 
