--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -49,6 +49,7 @@
   flex-direction: column;
   border-radius: 1px;
   height: 330px;
+  max-width: 430px;
 }
 
 .modal__heading {
@@ -76,7 +77,7 @@
 }
 
 #profile-description-input {
-  margin: 0 0 29.74px;
+  margin: 0 0 27.74px;
 }
 
 .modal__button {
